# CAKE

./: .flake8  .gitignore  .isort.cfg  .pylintrc  =2.0  CAKE_INDEX.md  CLAUDE.md  CLAUDE_INTERVENTIONS.md  LICENSE  MODULE_REPORT_CORE.md  MODULE_REPORT_UTILS.md  QUICK-REFERENCE.md  README.md  cake-deployment-v2.md  cake-done-checklist-v2.md  cake-roadmap-v2.md  cake-scripts-filtered.md  cake-scripts-suite.md  claude_monitor.py  claude_watchdog.py  component_health_check.py  final_syntax_fixes.py  fix_all_docstrings.py  fix_all_syntax_errors.py  fix_and_test_components.py  fix_comprehensive_syntax_errors.py  fix_docstring_comments.py  fix_docstring_indentation.py  fix_docstrings.py  fix_imports.py  fix_inline_docs.py  fix_inline_docstrings.py  fix_remaining_syntax_errors.py  lint-output.txt  lint-results.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  (+9 more)
.config/: .flake8
cleanup_reports/: 20250603-2018-final-state-summary.json  20250603-2023-final-state-summary.json
docs/: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROCESS.md  README_CLEANUP.md  parser-improvements-summary.md  phase3-plan.md  session-activity-summary-2025-06-01.md  task_log.md
icing/: README.md  __init__.py  cli.py  master_cleanup.py  pyproject.toml
icing/tests/: __init__.py  test_phase2.py  test_phase3.py  test_phase4_manifest.py  test_phase4_organise.py  test_phase4_scaffold.py
implementation-files/: COMPONENT_MAPPING.md  extract_mapping.sh  migrate.sh  text 10.txt  text 11.txt  text 12.txt  text 13.txt  text 14.txt  text 15.txt  text 16.txt  text 17.txt  text 18.txt  text 19.txt  text 2.txt  text 20.txt  (+20 more)
(+110 files in other folders)
