[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icing-for-cake"
version = "0.9.0b0"
description = "Repo-cleaner helper for the CAKE project"
requires-python = ">=3.8"
dependencies = [
  "black>=24",
  "isort>=5"
]

[project.scripts]
icing = "icing.cli:main"

[tool.setuptools]
packages = ["icing"]