[project]
name = "icing-for-cake"
version = "0.9.0b0"
description = "Repository cleanup tool for CAKE - fixes syntax, imports, and formatting"
authors = [{name = "CAKE Contributors", email = "cake@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.0.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
icing = "icing.master_cleanup:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"