[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icing-for-cake"
version = "0.9.0b0"
description = "Repo-cleaner helper for CAKE"
requires-python = ">=3.8"
dependencies = [
  "black>=24",
  "isort>=5"
]

[project.scripts]
icing = "icing.cli:main"

# ---- setuptools config ----
[tool.setuptools]
packages = ["icing"]   # the *only* package we publish

[tool.setuptools.package-dir]
"icing" = "."          # map package 'icing' to current dir